<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductDetailHostActivity"
    tools:ignore="MergeRootFrame">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/toolbar_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_image"
                android:scaleType="fitCenter" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/product_detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorColor="@color/design_default_color_primary_dark"
                android:layout_gravity="center"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/container_medium_margin"
                android:paddingTop="@dimen/container_medium_margin"
                android:paddingEnd="@dimen/container_medium_margin"
                tools:text="Product name" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/container_medium_margin"
                android:paddingEnd="@dimen/container_medium_margin"
                android:paddingTop="@dimen/container_smallest_margin"
                android:paddingBottom="@dimen/container_medium_margin"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_quantity_available"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="3 available" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_quantity_sold"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/container_smallest_margin"
                    android:visibility="gone"
                    tools:text="3 sold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_price"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/container_medium_margin"
                    tools:text="$10.000" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_discount"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:layout_marginStart="@dimen/container_medium_margin"
                    tools:text="20% OFF" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_shipping"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_medium_margin"
                android:layout_marginTop="@dimen/container_medium_margin"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                android:visibility="gone"
                android:text="@string/free_shipping" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_features_lbl"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_medium_margin"
                android:layout_marginTop="@dimen/container_medium_margin"
                android:text="@string/features" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_features"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/container_medium_margin"
                android:layout_marginEnd="@dimen/container_medium_margin"
                android:layout_marginTop="@dimen/container_smallest_margin"
                tools:text="Color: Blanco\nModelo: 2023" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_buy_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/container_large_margin"
        android:layout_marginEnd="@dimen/container_medium_margin"
        android:background="@color/purple_200"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/container_smallest_margin"
        android:layout_gravity="bottom|end"
        android:src="@drawable/shopping_cart"
        app:backgroundTint="@color/purple_200"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
